Update InspectionRepository.java